# Probot

./: .gitignore  Dockerfile  Dockerfile-core  Dockerfile-rfbrowser  Dockerfile-rfselenium  OpenSpace.pptx  README.md  consumer.py  data_preparer.py  default.conf  dependency.json  dependency.py  docker-compose.yml  executor.py  main.py  pyproject.toml  rabbitmq.conf  receiver.py  requirements.txt  script.sh  sender.py  splitter.py  test.robot  testSuite1.robot  testSuite2.robot
K8s-yaml/: log-combiner-claim1-persistentvolumeclaim.yaml  log-combiner-deployment.yaml  log-combiner-job.yaml  log-combiner-pod.yaml  nginx-deployment.yaml  nginx-output-location-persistentvolumeclaim.yaml  nginx-service.yaml  probot-consumer-claim1-persistentvolumeclaim.yaml  probot-consumer-deployment.yaml  probot-consumer-service.yaml  probot-default-networkpolicy.yaml  probot-rabbit-network-networkpolicy.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  test-outputs-persistentvolumeclaim.yaml
K8s2/: probot-consumer-deployment.yaml  probot-consumer-service.yaml  probot-default-networkpolicy.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml
log-combiner/: log_combiner.py
src/: Dockerfile  Dockerfile-small  consumer.py  dependency.json  executor.py  main.py  sender.py  splitter.py
src/log-combiner/: log_combiner.py
src/logcombiner/: Dockerfile  log_combiner.py
suites/: my_robot_func.py  seleniumsuite.robot  testSuite1.robot  testSuite2.robot
unit-tests/: consumer-tests.py  log-combiner-tests.py  publisher-tests.py
unit-tests/unittest-log/: 1-runtime.txt  2-runtime.txt  (+5 more)
(+2 files in other folders)
